tests/baselines/reference/decoratorOnImportEquals1.errors.txt
decoratorOnImportEquals1.ts(3,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
decoratorOnImportEquals1.ts(8,5): error TS1206: Decorators are not valid here.


==== decoratorOnImportEquals1.ts (2 errors) ====
    declare function dec<T>(target: T): T;
    
    module M1 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var X: number;
    }
    
    module M2 {
        @dec
        ~
!!! error TS1206: Decorators are not valid here.
        import X = M1.X;
    }